--- a/src/lib/stores/config-text.json
+++ b/src/lib/stores/config-text.json
@@ -1,14 +1,14 @@
 {
-  "heading": "Education spending up across all EU countries",
-  "subheading": "General government expenditure on military defense as a percentage of GDP in countries of the European Union in 2020",
+  "heading": "How profound are the basic digital skills amongst 15-74 year old citizens across all EU countries?",
+  "subheading": "In 2022, nearly 30 % of employed people in the EU aged 15-74 reported using digital devices for the entirety or most of their working time. Furthermore 62% of in 2023 interviewed SMEs (small and medium sized enterprises) responded in the Flash Eurobarometer 529 that digital skills have become increasingly important for their business. As of 2023 56% of EU people have at least basic digital skills.",
   "legend1": "No data available",
-  "tooltip1": "of GDP",
+  "tooltip1": "have basic digital skills",
   "textSourceDescription": "Source",
   "textSource": "Eurostat",
   "textNoteDescription": "Note",
-  "textNote": "Government expenditure by COFOG (UNSD classification of functions of government, replicated in ESA2010) function and type.",
+  "textNote": "Overall digital skills refer to five areas: information and data literacy skills, communication and collaboration skills, digital content creation skills, safety skills and problem-solving skills. To have at least basic overall digital skills, people must know how to do at least one activity related to each area.",
   "textDataAccess": "Access the data",
-  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tps00005/default/table?lang=en",
+  "linkDataAccess": "https://ec.europa.eu/eurostat/databrowser/view/tepsr_sp410/default/table?lang=en&category=t_isoc.t_isoc_sk",
   "textCountryClick": "Click for more info",
   "extraInfoText_BE": "With the need for unanimity causing a bureaucratic bottleneck in many areas, there is a certain logic to moving towards qualified majority voting where possible. In practice, a qualified majority is when 15 of the 27 member states votes in favour of something, as long as together they represent more than 65 per cent of the EU’s 450 million citizens.",
   "extraInfoLink_BE": "Read more",
